--- a/toolForRegExp/RegExp.html
+++ b/toolForRegExp/RegExp.html
@@ -26,9 +26,8 @@
 					<br>
 					<span class="header" id="replaceheader">请输入替换的正则表达式:</span>
 					<br>
-					<input id="RegExReplace" name="RegExReplace" type="text" size="62" style="font-size:13px">
-					<br>
-					<span>填写你想查找或替换的文本:</span>
+					<input id="RegExReplace" name="RegExReplace" type="text" size="62" style="font-size:13px">				
+					<span class="header" style="margin-top: 3px;display: block;">填写你想查找或替换的文本:</span>
 					<textarea name="searchText"  cols="70" rows="6"></textarea>
 					<img src="http://files.cnblogs.com/files/MuYunyun/pkq.gif" style="margin-left: 10px">
 					<br>
@@ -36,7 +35,7 @@
 				</td>
 			</tr>
 		</table>
-	</form>
+	</form><br>
 	<span id="output"></span>
 	<script language="JavaScript">
 		hideReplaceFields();
